@@ -21,7 +21,7 @@ foreach ($data as $str) {
 	$db->query("INSERT INTO strings VALUES('$str')");
 }
 
-$r = $db->unbuffered_query("SELECT a from strings", SQLITE_NUM);
+$r = $db->queryUnbuffered("SELECT a from strings", SQLITE_NUM);
 while ($row = $r->valid()) {
 	var_dump($r->current());
 	$r->next();
